antlr/parser/swaggable_parser.go
// Code generated from SwaggableParser.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // SwaggableParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'<'", "'>'", "'('", "')'", "'{'", "'}'", "'.'", "','", "'_'", "'comp'",
	"'enum'", "", "", "", "", "'map'", "", "", "", "", "'format.password'",
	"'format.date'", "'format.datetime'", "'format.byte'", "'format.binary'",
	"'format.email'", "'format.uuid'", "'format.uri'", "'format.hostname'",
	"'format.ipv4'", "'format.ipv6'",
}
var symbolicNames = []string{
	"", "LessThan", "MoreThan", "OpenParen", "CloseParen", "OpenBrace", "CloseBrace",
	"Dot", "Comma", "Underscore", "ComponentInit", "EnumInit", "StringType",
	"NumberType", "ArrayType", "BooleanType", "MapType", "Required", "Searchable",
	"Indexed", "Format", "PasswordFormat", "DateFormat", "DateTimeFormat",
	"ByteFormat", "BinaryFormat", "EmailFormat", "UuidFormat", "UriFormat",
	"HostnameFormat", "Ipv4Format", "Ipv6Format", "Identifier", "WS", "COMMENT",
	"LINE_COMMENT",
}

var ruleNames = []string{
	"program", "objDeclaration", "enumDeclaration", "enumBlock", "identifierList",
	"extendsStatement", "objTail", "nativeType", "arrayType", "mapType", "typeName",
	"formatIdentifier", "formatType", "formatAnnotation", "annotationType",
	"parameterDefinition", "objElement", "modelElement", "modelElements",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SwaggableParser struct {
	*antlr.BaseParser
}

func NewSwaggableParser(input antlr.TokenStream) *SwaggableParser {
	this := new(SwaggableParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SwaggableParser.g4"

	return this
}

// SwaggableParser tokens.
const (
	SwaggableParserEOF            = antlr.TokenEOF
	SwaggableParserLessThan       = 1
	SwaggableParserMoreThan       = 2
	SwaggableParserOpenParen      = 3
	SwaggableParserCloseParen     = 4
	SwaggableParserOpenBrace      = 5
	SwaggableParserCloseBrace     = 6
	SwaggableParserDot            = 7
	SwaggableParserComma          = 8
	SwaggableParserUnderscore     = 9
	SwaggableParserComponentInit  = 10
	SwaggableParserEnumInit       = 11
	SwaggableParserStringType     = 12
	SwaggableParserNumberType     = 13
	SwaggableParserArrayType      = 14
	SwaggableParserBooleanType    = 15
	SwaggableParserMapType        = 16
	SwaggableParserRequired       = 17
	SwaggableParserSearchable     = 18
	SwaggableParserIndexed        = 19
	SwaggableParserFormat         = 20
	SwaggableParserPasswordFormat = 21
	SwaggableParserDateFormat     = 22
	SwaggableParserDateTimeFormat = 23
	SwaggableParserByteFormat     = 24
	SwaggableParserBinaryFormat   = 25
	SwaggableParserEmailFormat    = 26
	SwaggableParserUuidFormat     = 27
	SwaggableParserUriFormat      = 28
	SwaggableParserHostnameFormat = 29
	SwaggableParserIpv4Format     = 30
	SwaggableParserIpv6Format     = 31
	SwaggableParserIdentifier     = 32
	SwaggableParserWS             = 33
	SwaggableParserCOMMENT        = 34
	SwaggableParserLINE_COMMENT   = 35
)

// SwaggableParser rules.
const (
	SwaggableParserRULE_program             = 0
	SwaggableParserRULE_objDeclaration      = 1
	SwaggableParserRULE_enumDeclaration     = 2
	SwaggableParserRULE_enumBlock           = 3
	SwaggableParserRULE_identifierList      = 4
	SwaggableParserRULE_extendsStatement    = 5
	SwaggableParserRULE_objTail             = 6
	SwaggableParserRULE_nativeType          = 7
	SwaggableParserRULE_arrayType           = 8
	SwaggableParserRULE_mapType             = 9
	SwaggableParserRULE_typeName            = 10
	SwaggableParserRULE_formatIdentifier    = 11
	SwaggableParserRULE_formatType          = 12
	SwaggableParserRULE_formatAnnotation    = 13
	SwaggableParserRULE_annotationType      = 14
	SwaggableParserRULE_parameterDefinition = 15
	SwaggableParserRULE_objElement          = 16
	SwaggableParserRULE_modelElement        = 17
	SwaggableParserRULE_modelElements       = 18
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(SwaggableParserEOF, 0)
}

func (s *ProgramContext) ModelElements() IModelElementsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IModelElementsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IModelElementsContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *SwaggableParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SwaggableParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SwaggableParserComponentInit || _la == SwaggableParserEnumInit {
		{
			p.SetState(38)
			p.ModelElements()
		}

	}
	{
		p.SetState(41)
		p.Match(SwaggableParserEOF)
	}

	return localctx
}

// IObjDeclarationContext is an interface to support dynamic dispatch.
type IObjDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsObjDeclarationContext differentiates from other interfaces.
	IsObjDeclarationContext()
}

type ObjDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObjDeclarationContext() *ObjDeclarationContext {
	var p = new(ObjDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_objDeclaration
	return p
}

func (*ObjDeclarationContext) IsObjDeclarationContext() {}

func NewObjDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ObjDeclarationContext {
	var p = new(ObjDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_objDeclaration

	return p
}

func (s *ObjDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *ObjDeclarationContext) ComponentInit() antlr.TerminalNode {
	return s.GetToken(SwaggableParserComponentInit, 0)
}

func (s *ObjDeclarationContext) Identifier() antlr.TerminalNode {
	return s.GetToken(SwaggableParserIdentifier, 0)
}

func (s *ObjDeclarationContext) ObjTail() IObjTailContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjTailContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObjTailContext)
}

func (s *ObjDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ObjDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ObjDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterObjDeclaration(s)
	}
}

func (s *ObjDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitObjDeclaration(s)
	}
}

func (p *SwaggableParser) ObjDeclaration() (localctx IObjDeclarationContext) {
	localctx = NewObjDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SwaggableParserRULE_objDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(SwaggableParserComponentInit)
	}
	{
		p.SetState(44)
		p.Match(SwaggableParserIdentifier)
	}
	{
		p.SetState(45)
		p.ObjTail()
	}

	return localctx
}

// IEnumDeclarationContext is an interface to support dynamic dispatch.
type IEnumDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEnumDeclarationContext differentiates from other interfaces.
	IsEnumDeclarationContext()
}

type EnumDeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEnumDeclarationContext() *EnumDeclarationContext {
	var p = new(EnumDeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_enumDeclaration
	return p
}

func (*EnumDeclarationContext) IsEnumDeclarationContext() {}

func NewEnumDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumDeclarationContext {
	var p = new(EnumDeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_enumDeclaration

	return p
}

func (s *EnumDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumDeclarationContext) EnumInit() antlr.TerminalNode {
	return s.GetToken(SwaggableParserEnumInit, 0)
}

func (s *EnumDeclarationContext) Identifier() antlr.TerminalNode {
	return s.GetToken(SwaggableParserIdentifier, 0)
}

func (s *EnumDeclarationContext) TypeName() ITypeNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeNameContext)
}

func (s *EnumDeclarationContext) EnumBlock() IEnumBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEnumBlockContext)
}

func (s *EnumDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterEnumDeclaration(s)
	}
}

func (s *EnumDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitEnumDeclaration(s)
	}
}

func (p *SwaggableParser) EnumDeclaration() (localctx IEnumDeclarationContext) {
	localctx = NewEnumDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SwaggableParserRULE_enumDeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(SwaggableParserEnumInit)
	}
	{
		p.SetState(48)
		p.Match(SwaggableParserIdentifier)
	}
	{
		p.SetState(49)
		p.Match(SwaggableParserLessThan)
	}
	{
		p.SetState(50)
		p.TypeName()
	}
	{
		p.SetState(51)
		p.Match(SwaggableParserMoreThan)
	}
	{
		p.SetState(52)
		p.EnumBlock()
	}

	return localctx
}

// IEnumBlockContext is an interface to support dynamic dispatch.
type IEnumBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEnumBlockContext differentiates from other interfaces.
	IsEnumBlockContext()
}

type EnumBlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEnumBlockContext() *EnumBlockContext {
	var p = new(EnumBlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_enumBlock
	return p
}

func (*EnumBlockContext) IsEnumBlockContext() {}

func NewEnumBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumBlockContext {
	var p = new(EnumBlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_enumBlock

	return p
}

func (s *EnumBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumBlockContext) AllIdentifier() []antlr.TerminalNode {
	return s.GetTokens(SwaggableParserIdentifier)
}

func (s *EnumBlockContext) Identifier(i int) antlr.TerminalNode {
	return s.GetToken(SwaggableParserIdentifier, i)
}

func (s *EnumBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterEnumBlock(s)
	}
}

func (s *EnumBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitEnumBlock(s)
	}
}

func (p *SwaggableParser) EnumBlock() (localctx IEnumBlockContext) {
	localctx = NewEnumBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SwaggableParserRULE_enumBlock)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Match(SwaggableParserOpenBrace)
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SwaggableParserIdentifier {
		{
			p.SetState(55)
			p.Match(SwaggableParserIdentifier)
		}

		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(61)
		p.Match(SwaggableParserCloseBrace)
	}

	return localctx
}

// IIdentifierListContext is an interface to support dynamic dispatch.
type IIdentifierListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIdentifierListContext differentiates from other interfaces.
	IsIdentifierListContext()
}

type IdentifierListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdentifierListContext() *IdentifierListContext {
	var p = new(IdentifierListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_identifierList
	return p
}

func (*IdentifierListContext) IsIdentifierListContext() {}

func NewIdentifierListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdentifierListContext {
	var p = new(IdentifierListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_identifierList

	return p
}

func (s *IdentifierListContext) GetParser() antlr.Parser { return s.parser }

func (s *IdentifierListContext) AllIdentifier() []antlr.TerminalNode {
	return s.GetTokens(SwaggableParserIdentifier)
}

func (s *IdentifierListContext) Identifier(i int) antlr.TerminalNode {
	return s.GetToken(SwaggableParserIdentifier, i)
}

func (s *IdentifierListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentifierListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdentifierListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterIdentifierList(s)
	}
}

func (s *IdentifierListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitIdentifierList(s)
	}
}

func (p *SwaggableParser) IdentifierList() (localctx IIdentifierListContext) {
	localctx = NewIdentifierListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SwaggableParserRULE_identifierList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(SwaggableParserIdentifier)
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SwaggableParserComma {
		{
			p.SetState(64)
			p.Match(SwaggableParserComma)
		}
		{
			p.SetState(65)
			p.Match(SwaggableParserIdentifier)
		}

		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IExtendsStatementContext is an interface to support dynamic dispatch.
type IExtendsStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExtendsStatementContext differentiates from other interfaces.
	IsExtendsStatementContext()
}

type ExtendsStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExtendsStatementContext() *ExtendsStatementContext {
	var p = new(ExtendsStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_extendsStatement
	return p
}

func (*ExtendsStatementContext) IsExtendsStatementContext() {}

func NewExtendsStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExtendsStatementContext {
	var p = new(ExtendsStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_extendsStatement

	return p
}

func (s *ExtendsStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ExtendsStatementContext) IdentifierList() IIdentifierListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentifierListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentifierListContext)
}

func (s *ExtendsStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExtendsStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExtendsStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterExtendsStatement(s)
	}
}

func (s *ExtendsStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitExtendsStatement(s)
	}
}

func (p *SwaggableParser) ExtendsStatement() (localctx IExtendsStatementContext) {
	localctx = NewExtendsStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SwaggableParserRULE_extendsStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)
		p.Match(SwaggableParserLessThan)
	}
	{
		p.SetState(72)
		p.IdentifierList()
	}

	return localctx
}

// IObjTailContext is an interface to support dynamic dispatch.
type IObjTailContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsObjTailContext differentiates from other interfaces.
	IsObjTailContext()
}

type ObjTailContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObjTailContext() *ObjTailContext {
	var p = new(ObjTailContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_objTail
	return p
}

func (*ObjTailContext) IsObjTailContext() {}

func NewObjTailContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ObjTailContext {
	var p = new(ObjTailContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_objTail

	return p
}

func (s *ObjTailContext) GetParser() antlr.Parser { return s.parser }

func (s *ObjTailContext) ExtendsStatement() IExtendsStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExtendsStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExtendsStatementContext)
}

func (s *ObjTailContext) AllObjElement() []IObjElementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IObjElementContext)(nil)).Elem())
	var tst = make([]IObjElementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IObjElementContext)
		}
	}

	return tst
}

func (s *ObjTailContext) ObjElement(i int) IObjElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjElementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IObjElementContext)
}

func (s *ObjTailContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ObjTailContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ObjTailContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterObjTail(s)
	}
}

func (s *ObjTailContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitObjTail(s)
	}
}

func (p *SwaggableParser) ObjTail() (localctx IObjTailContext) {
	localctx = NewObjTailContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, SwaggableParserRULE_objTail)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SwaggableParserLessThan {
		{
			p.SetState(74)
			p.ExtendsStatement()
		}

	}
	{
		p.SetState(77)
		p.Match(SwaggableParserOpenBrace)
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la-12)&-(0x1f+1)) == 0 && ((1<<uint((_la-12)))&((1<<(SwaggableParserStringType-12))|(1<<(SwaggableParserNumberType-12))|(1<<(SwaggableParserArrayType-12))|(1<<(SwaggableParserBooleanType-12))|(1<<(SwaggableParserMapType-12))|(1<<(SwaggableParserIdentifier-12)))) != 0 {
		{
			p.SetState(78)
			p.ObjElement()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(84)
		p.Match(SwaggableParserCloseBrace)
	}

	return localctx
}

// INativeTypeContext is an interface to support dynamic dispatch.
type INativeTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNativeTypeContext differentiates from other interfaces.
	IsNativeTypeContext()
}

type NativeTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNativeTypeContext() *NativeTypeContext {
	var p = new(NativeTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SwaggableParserRULE_nativeType
	return p
}

func (*NativeTypeContext) IsNativeTypeContext() {}

func NewNativeTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NativeTypeContext {
	var p = new(NativeTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SwaggableParserRULE_nativeType

	return p
}

func (s *NativeTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *NativeTypeContext) StringType() antlr.TerminalNode {
	return s.GetToken(SwaggableParserStringType, 0)
}

func (s *NativeTypeContext) NumberType() antlr.TerminalNode {
	return s.GetToken(SwaggableParserNumberType, 0)
}

func (s *NativeTypeContext) BooleanType() antlr.TerminalNode {
	return s.GetToken(SwaggableParserBooleanType, 0)
}

func (s *NativeTypeContext) ArrayType() IArrayTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArrayTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArrayTypeContext)
}

func (s *NativeTypeContext) MapType() IMapTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMapTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMapTypeContext)
}

func (s *NativeTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NativeTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NativeTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.EnterNativeType(s)
	}
}

func (s *NativeTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SwaggableParserListener); ok {
		listenerT.ExitNativeType(s)
	}
}

func (p *SwaggableParser) NativeType() (localctx INativeTypeContext) {
	localctx = NewNativeTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, SwaggableParserRULE_nativeType)

	defer func() {
		p.ExitRule()
	}()
